--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf todo-react && react-scripts build && mv build todo-react",
+    "deploy": "now todo-react/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
